theme settings initial commit

--- a/style.less
+++ b/style.less
@@ -93,8 +93,8 @@ body.logged-in > .header {
 }
 
 body > .wrapper > .container {
-	margin-top: @headerHeight + @gridGutterWidth;
-	margin-bottom:@gridGutterWidth;
+	padding-top: @headerHeight + @gridGutterWidth;
+	padding-bottom:@gridGutterWidth;
 }
 
 
